<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:id="@+id/overall_layout">

    <!-- adding the toolbar -->
    <!--<LinearLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:orientation="vertical"-->
        <!--android:id="@+id/toolLayout">-->

        <!--<include-->
            <!--android:id="@+id/toolbar"-->
            <!--layout="@layout/toolbar" />-->
    <!--</LinearLayout>-->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="wycliffe.com.jkusda2.activity.SignUp">



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        >

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:ems="10"
                            android:id="@+id/EmailReg"

                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:hint="@string/hint_email"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_below="@+id/input_layout_email"
                        >
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/etNameReg"
                            android:layout_alignParentTop="false"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:hint="@string/hint_name"
                            android:layout_marginTop="20dp"/>
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_below="@+id/input_layout_name">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:id="@+id/etAge"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:hint= "Age"
                            android:layout_marginTop="13dp"
                            />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_below="@+id/input_layout_age">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:ems="10"
                            android:id="@+id/etPhoneReg"
                            android:layout_below="@+id/EmailReg"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:hint= "@string/hint_phone"
                            android:layout_marginTop="13dp"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_below="@+id/input_layout_phone">


                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="10"
                            android:id="@+id/etPassword"
                            android:layout_below="@+id/PhoneReg"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:hint="@string/hint_password"
                            android:layout_marginTop="15dp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_passwordConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_below="@+id/input_layout_password">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="10"
                            android:id="@+id/etConfirmPassword"
                            android:layout_below="@+id/Password"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:hint="@string/hint_confirm_password"
                            android:layout_marginTop="13dp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/showPasswordreg"
                        android:layout_below="@+id/input_layout_passwordConfirm"
                        android:layout_marginTop="13dp"
                        android:text="@string/showPassword"
                        android:checked="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/hint_gender"
                        android:layout_below="@+id/showPasswordreg"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:id="@+id/gendertextView"
                        android:layout_marginTop="15dp"/>

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/RadioGender"
                        android:layout_below="@+id/gendertextView">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_male"
                            android:id="@+id/Male"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:checked="true"
                            android:textColorHighlight="#9993e3" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_female"
                            android:layout_below="@+id/Male"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:id="@+id/Female" />
                    </RadioGroup>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/blood_group_text"
                        android:text="Blood Group :"
                        android:textColor="#000"
                        android:layout_below="@id/RadioGender"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="10dp"/>


                    <Spinner
                        android:id="@+id/myBloodGroupSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/blood_group_prompt"
                        android:layout_below="@+id/blood_group_text"
                        android:layout_marginTop="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/hint_rhesus"
                        android:layout_below="@+id/myBloodGroupSpinner"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:id="@+id/text_rhesus"
                        android:layout_marginTop="15dp"/>


                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/RadioRhesus"
                        android:layout_below="@+id/text_rhesus"
                        android:layout_marginBottom="0dp" >

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_positive"
                            android:id="@+id/positive"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:checked="true"
                            android:textColorHighlight="#9993e3" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_negative"
                            android:layout_below="@+id/Male"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:id="@+id/negative" />
                    </RadioGroup>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="First time donor?"
                        android:layout_below="@+id/RadioRhesus"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:id="@+id/text_ftd"
                        android:layout_marginTop="15dp"/>


                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/RadioFtd"
                        android:layout_below="@+id/text_ftd"
                        android:layout_marginBottom="0dp" >

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="YES"
                            android:id="@+id/yes"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:checked="true"
                            android:textColorHighlight="#9993e3" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="NO"
                            android:layout_below="@+id/yes"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:id="@+id/no" />
                    </RadioGroup>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_below="@+id/RadioFtd">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:id="@+id/etWeight"

                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:hint="@string/hint_weight"
                            />

                    </com.google.android.material.textfield.TextInputLayout>



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/location_text"
                        android:text="Current Location :"
                        android:textColor="#000"
                        android:layout_below="@id/input_layout_weight"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="10dp"/>


                    <Spinner
                        android:id="@+id/myLocationSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/location_prompt"
                        android:layout_below="@+id/location_text"
                        android:layout_marginTop="10dp"
                        />


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_register"
                        android:id="@+id/registerButton"
                        android:layout_below="@+id/myLocationSpinner"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:background="@color/colorPrimary"
                        android:textColor="#fff"/>

                </RelativeLayout>

            </FrameLayout>

        </RelativeLayout>

    </ScrollView>
</LinearLayout>